public/styles/index.css
/* ... */
        #clear-form {
            height: 30px;
            width: 30px;
        }
    .form {
        display: flex;
        flex-direction: column;
        border: 1px solid black;
        padding: 5px;
    }
        .input-container {
            display: flex;
            justify-content: space-between;
            align-items: center;
            margin-bottom: 5px;
        }
            input {
                margin-left: 5px;
            }
            textarea {
                padding: 2px;
                margin-bottom: 5px;
            }
            #workout-input {
                height: 20px;
            }
            #exercise-input {
                width: 100%;
                height: 20px;
            }
            #weight-and-reps {
                display: flex;
                justify-content: space-between;
                flex-wrap: wrap;
            }
            #weight-input {
                width: 50px;
                height: 20px;
            }
            #weight-unit {
                height: 24px;
            }
            #reps-input {
                width: 40px;
                height: 20px;
            }
        #superset-check {
            display: inline;
        }
            .superset-input-container {
                margin-left: 25px;
            }
                #superset-exercise-input {
                    width: 100%;
                    height: 20px;
                }
                #superset-weight-input {
                    width: 50px;
                    height: 20px;
                }
                #superset-weight-unit {
                    height: 24px;
                }
                #superset-reps-input {
                    width: 40px;
                    height: 20px;
                }
        #submit-button {
            height: 30px;
        }
        #submit-button-false {
            height: 30px;
        }
    
.workout-container {
    display: flex;
    flex-direction: column;
    flex: 7 1 auto;
    width: 74%;
}
    .workout-title {
        border: 1px solid black;
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 10px;
    }
        #workout-name {
            display: flex;
            gap: 5px;
            user-select: none;
        }
        #display-date {
            height: 25px;
            width: 100px;
            margin: 0;
        }
    .workout-exercises {
        display: flex;
        overflow-x: scroll;
        height: 100%;
        border: 1px solid lightgray;
    }
        #not-found {
            padding: 10px;
        }
        .exercise-container {
            border-radius: 10px 10px 0 0;
            display: flex;
            flex-direction: column;
            height: 97%;
            width: 250px;
            min-width: 250px;
            margin: 5px;
            background: linear-gradient(0deg, rgba(46, 153, 240, 0.8) 0%, rgba(255, 255, 255) 100%);
            box-shadow: rgba(0, 0, 0, 0.2) 0 -2px 5px, rgba(46, 153, 240, 0.4) 0px 5px, rgba(46, 153, 240, 0.3) 0px 10px, rgba(46, 153, 240, 0.2) 0px 15px, rgba(46, 153, 240, 0.1) 0px 20px, rgba(46, 153, 240, 0.05) 0px 25px;

        }
            .exercise-name {
                padding: 5px;
                border-bottom: 1px solid lightgray;
                text-align: center;
                border-radius: 10px 10px 0 0;
                display: flex;
                justify-content: center;
                align-items: center;
                background-color: white;
                user-select: none;
            }
            .exercise-comments {
                border-radius: 0 0 5px 5px;
                border: 1px solid lightgray;
                color:rgba(0, 0, 0, 0.8);
                border-top: 0;
                margin: 0 5px 5px 5px;
                list-style-type: none;
                font-size: .8rem;
                background: white;
                padding: 2px;
            }
                .exercise-comments li {
                    padding: 5px;
                    background: rgba(46, 153, 240, 0.1);
                    border-bottom: 1px solid white;
                    border-radius: 2px;
                }
                .exercise-comments li:last-of-type {
                    border-bottom: none;
                }
            .weight-container {
                padding: 5px;
                text-align: center;
                background: none;
            }
                .set-weight-and-count {
                    border-radius: 5px;
                    border: 1px solid lightgray;
                    display: flex;
                    justify-content: space-between;
                    padding: 5px;
                    user-select: none;
                    box-shadow: rgba(0, 0, 0, 0.2) 0 2px 5px
                }
                .set-details {
                    border-radius: 0 0 5px 5px;
                    border: 1px solid lightgray;
                    border-top: 0;
                    margin: 0 5px 0 5px;
                    text-align: left;
                    padding: 5px;
                    padding-top: 0;
                }
                    .set-reps {
                        border-radius: 0 0 5px 5px;
                        border: 1px solid lightgray;
                        border-top: 0;
                        padding: 5px;
                        display: flex;
                        gap: 10px;
                    }
                        .set-rep {
                            background: rgba(46, 153, 240, 0.1);
                            border-radius: 3px;
                            padding: 0 3px 0 3px;
                        }
/* ... */

